# trinibytes_fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  crontab  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  run_caribbean_jobs_scraper.bat  schemas.py
alembic/: env.py
alembic/versions/: 1147a92ad6a0_changes_to_caribbeanjobspost_table.py  3deb82ac2659_changes_to_caribbeanjobspost_table.py  4a914ff368b4_changes_to_caribbeanjobspost_table.py  897589582f92_initial_tables.py  94b517949beb_changes_to_caribbeanjobspost_table.py  9985fa067616_initial_tables.py  a78494e99924_changes_to_caribbeanjobspost_table.py
config/nginx/: nginx.conf
config/nginx/certs/: localhost.crt  localhost.key
kubernetes/: env-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml  web-deployment.yaml
scripts/: caribbean_jobs_scraper.py  logging_config.py
scripts/tests/: test_caribbean_jobs_scraper.py
tests/: test_caribbean_jobs_scraper.py
trinibytes_fastapi/: caribbean_jobs_scraper.py  logging_config.py
trinibytes_fastapi/tests/: test_caribbean_jobs_scraper.py
