[tool.poetry]
name = "trinibytes_fastapi"
version = "0.1.0"
description = ""
authors = ["Rishi Latchmepersad <latchmepersad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
