[tool.poetry]
name = "trinibytes_fastapi"
version = "0.1.0"
description = ""
authors = ["Rishi Latchmepersad <latchmepersad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
PyYAML = "^6.0"
SQLAlchemy = "^1.4.31"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]